css/components/fp-hero.css
.fp-hero{
  position: relative;
  z-index: 11;
  display: flex;
  flex-direction: column;

  margin-top: -113px;
  width: 100%;

  @mixin tabPort {
    margin-top: -140px;
  }
  @mixin tabLand{
    margin-top: -102px;
  }
  @mixin laptop{
  }
  @mixin desktop{
    flex-direction: row;
    height: 75rem;
    margin-top: -82px;
  }

  &__panel{
    position: relative;
    width: 100%;
    
    @mixin desktop{
      height: 100%;
      width: 50%;
    }

    &--left{
      background-color: $bg-mid;
      padding-bottom: 6rem;
    }

    &--right{
      display: flex;
      flex-direction: column;
    }
  }

  /*==================================
  ====   LEFT PANEL COMPONENTS   =====
  ===================================*/

  &__banner-box{
    position: relative;
    z-index: 3;
    width: max-content;
    @mixin fullDesktop{
      transform: translate(12rem, 5rem);
    }
  }

  &__banner{
    letter-spacing: -1px;
    font-size: 5rem;
    text-shadow: 0 0 2rem rgba(0, 0, 0, 0.6);
    color: $bg-light;
    line-height: 1;
    padding: 1rem;
    
    @mixin tabPort{
      padding: 3rem;
      font-size: 7rem;
    }
    @mixin desktop{
      letter-spacing: -3px;
      font-size: 13rem;
    }
    @mixin desktop{
      font-size: 15rem;
    }
  }

  &__hook-box{
    position: relative;
    z-index: 3;

    @mixin laptop{
      height: 23rem;
      width: 54rem;
    }
    @mixin desktop{
      transform: translate(9rem, 7rem);
    }
  }
  
  &__hook{
    padding: 1.6rem;
    font-size: 2rem;
    color: $bg-light;
    text-shadow: 0 0 4px $bg-dark;

    @mixin tabPort {
      font-size: 2.8rem;
    }
  }

  &__circle-box{
    overflow: hidden;
    position: absolute;
    top: 2%;
    right: 2%;
    display: flex;
    align-items: center;
    justify-content: center;

    height: 18rem;
    width: 18rem;
    border-radius: 22rem;
    background-color: $bg-dark;

    
    @mixin tabPort{
      height: 22rem;
      width: 22rem;
    }
    @mixin laptop{
      height: 40rem;
      width: 40rem;
      border-radius: 38rem;
    }
    @mixin desktop{
      top: initial;
      bottom: 4%;
      right: 4%;
    }
  }

  &__circle{
    width:100%;
  }

  /*===================================
  ====   RIGHT PANEL COMPONENTS   =====
  ====================================*/

  &__search-box{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    flex-wrap: wrap;

    width: 100%;
    padding: 2rem 2%;
    background-color: $bg-dark;

    @mixin laptop{
      height: 25rem;
      padding: 4rem 3rem;
    }
    @mixin desktop{
      height: 40rem;
    }
  }

  &__search-heading{
    width: 100%;
    font-size: 2.8rem;
    padding: 2rem 0;
    color: $bg-light; 

    @mixin laptop{
      font-size: 3.2rem;
    }
    @mixin desktop{
      text-align: right;
    }
  }

  &__search-form{ 
    overflow: hidden;
    display: flex;

    width: 100%;
    height: 4.5rem;
    border-radius: 5rem;
  }
  
  &__search-bar{
    flex: 1;
    padding: .5rem 2rem;
    font-size: 2rem;
    outline: none;
    border: none;
  }

  &__search-btn{
    width: max-content;
    background-color: $accent;
    color: $bg-mid;
    outline: none;
    border: none;
    font-size: 2.2rem;
    font-weight: 500;
    cursor: pointer;
    padding: 0 1rem;
  }

  /*===================================
  =====   NAVIGATION COMPONENTS   =====
  ====================================*/

  &__nav-box{
    flex: 1;
    display: flex;
    flex-direction: column;
    
    padding: 2%;
    background-color: $bg-light;
    
    @mixin laptop {
      padding: 6rem 4rem;
      font-size: 3.8rem;
    }
  }

  &__nav-heading{
    margin-bottom: 1.6rem;
    font-size: 2.8rem;
    text-shadow: 0 0 2rem rgba(250, 221, 126, 0.4);
    color: $bg-dark;

    @mixin laptop {
      margin-bottom: 0;
      font-size: 3.8rem;
    }
  }

  &__nav{
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    
    width: 100%;
  }

  &__nav-item{
    position: relative;
    overflow: hidden;
    margin-bottom: 2rem;
  
    width: 18rem;
    height: 12rem;
    transform: scale(.9);
    transition: transform .3s;

    @mixin tabPort{
      transform: scale(1);
    }

    &:hover{
      transform: scale(1.05);
      box-shadow: 0 0 6rem rgba(250, 221, 126, 0.4);
    }
    &:hover .fp-hero__nav-item-label{
      transform: translateX(0) rotate(0deg);
      width: 100%;
      padding: 1.5rem;
      background-color: rgba(20, 20, 56, 0.75);
      font-size: 2.2rem;
      color: $accent;
    }
  }

  &__nav-item-img-box{
    display: flex;
    align-items: center;
    justify-content: center;

    background-color: white;
    width: 100%;
    height: 100%;
  }

  &__nav-item-img{
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__nav-item-label{
    position: absolute;
    bottom: 0;
    width: 120%;
    transform: translate(10%, -35%) rotate(-25deg);

    padding: .5rem;
    background-color: $bg-dark;
    color: white;
    text-transform: capitalize;
    text-align: center;

    transition: all .3s;
  }
}

